# BisonAudioConverter

./: .gitignore  AnotherWindow.cpp  AnotherWindow.h  AppState.h  AudioConverter.cpp  AudioConverter.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  vcpkg.json
include/: AboutWindow.h  AnotherWindow.h  AppState.h  AppStyle.h  AudioConverter.h  HelpWindow.h  LogWindow.h  MainWindow.h  SingleFileConverterWindow.h
src/: AboutWindow.cpp  AnotherWindow.cpp  AppStyle.cpp  AudioConverter.cpp  HelpWindow.cpp  LogWindow.cpp  MainWindow.cpp  SingleFileConverterWindow.cpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
